--- a/package.json
+++ b/package.json
@@ -1,29 +1,16 @@
 {
-  "name": "teste",
+  "name": "qfome",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "express-promise-router": "^4.1.1",
-    "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0",
-<<<<<<< HEAD
-    "react-scripts": "^2.1.3",
-=======
-    "react-scripts": "^5.0.1",
-    "sequelize": "^6.21.6",
->>>>>>> 140df93d71070fa89a668f88cf17bd3dde01973e
-    "styled-components": "^5.3.5",
+    "react-router-dom": "^6.4.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
