--- a/package.json
+++ b/package.json
@@ -5,19 +5,28 @@
   "dependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
+    "@hookform/resolvers": "^2.9.10",
+    "@radix-ui/react-radio-group": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/styled-components": "^5.1.26",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^5.2.2",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-icons": "^4.4.0",
+    "react-native-styled-components": "^2.1.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^2.1.3",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.6",
+    "typescript": "^4.8.4",
+    "web-vitals": "^2.1.4",
+    "zod": "^3.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
